# zapy-sdk

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: on_merged.yml  python-check.yml  python-package.yml  python-publish.yml
src/zapy/: cli.py
src/zapy/api/: __init__.py  bootstrapper.py  connection.py  exceptions.py  models.py  server.py
src/zapy/api/v1/: __init__.py  api_requests.py  api_server.py  api_store.py
src/zapy/base/: __init__.py  auto.py  exceptions.py  models.py
src/zapy/requests/: __init__.py  context.py  converter.py  exceptions.py  file_loader.py  hooks.py  models.py  requester.py
src/zapy/store/: __init__.py  attr.py  context.py  manager.py
src/zapy/templating/: eval.py  templating.py  traceback.py
src/zapy/test/: __init__.py  assertion.py  models.py  test_case.py  test_runner.py
src/zapy/utils/: functools.py  module.py  singleton.py
tests/: test_cli.py
tests/api/: test_api_v1.py  test_api_v1_exec.py  test_api_v1_info.py  test_api_v1_stores.py  test_bootstrapper.py  test_connection.py
tests/assets/: chain.ipynb  chain_asserterror.ipynb  chain_import.ipynb  request2.zapy
tests/assets/chains/: chain.ipynb  chain_asserterror.ipynb  chain_import.ipynb  notebook.ipynb
tests/assets/requests/: request1.zapy
tests/assets/setup/: __init__.py  setup_store.py
tests/request/: test_request_body.py  test_request_chain.py  test_request_converter.py  test_request_headers.py  test_request_parameters.py  test_request_script.py  test_request_url.py
tests/templating/: test_eval.py  test_eval_jinja.py  test_eval_syntax.py  test_eval_variable.py  test_exec.py
tests/utils/: test_functools.py  test_module.py  test_singleton.py
