[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zapy-sdk"
dynamic = ["version"]
description = 'Zapy SDK for Zapy REST client'
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE.txt"}
keywords = []
authors = [
  { name = "zapy.dev" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    # Note: Python and license automatically added by some tools
    "Intended Audience :: Developers",
]
dependencies = [
  "fastapi>0.95.0",
  "uvicorn==0.*",
  "python-socketio[asyncio_client]",
  "pydantic==2.*",
  "httpx==0.*",
  "jinja2==3.*",
  "wrapt==1.*",
  'magicattr',
]

[project.urls]
Homepage = "https://zapy.dev"
Documentation = "https://docs.zapy.dev"
Issues = "https://github.com/ZapyLabs/zapy-sdk/issues"
Source = "https://github.com/ZapyLabs/zapy-sdk"

[tool.hatch.version]
path = "src/zapy/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/zapy"]

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "pytest-asyncio",
  "nbformat",
  "ipython",
  "mypy>=1.8.0",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]
check = "mypy --install-types --non-interactive {args:src/zapy}"

[[tool.hatch.envs.all.matrix]]
python = ["3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["zapy"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]
# disable unused imports for init
"__init__.py" = ["F401"]
# allow print for cli/shell
"src/zapy/cli.py" = ["T201"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "socketio",
  "magicattr",
  "wrapt",
]
ignore_missing_imports = true

[tool.coverage.run]
source_pkgs = ["zapy", "tests"]
branch = true
parallel = true
omit = [
  "src/zapy/__init__.py",
]

[tool.coverage.paths]
zapy = ["src/zapy", "*/zapy/src/zapy"]
tests = ["tests", "*/zapy/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
omit = [
  "tests/*",
]
fail_under = 80

[project.scripts]
zapy = "zapy.cli:ZapyCLI"
